# Vejix.TasksService

./: Cargo.toml  Dockerfile  Makefile  Rocket.toml
.github/workflows/: build.yaml
helm/: values.yaml
helm/templates/: deployment.yaml  service.yaml
k8s/: deploy.yaml
migrations/1609283738_initial/: up.sql
migrations/1609283797_add_checklists/: down.sql  up.sql
migrations/1610983575_add_tasks_folder/: down.sql  up.sql
migrations/1_initial/: up.sql
migrations/2_add_checklists/: up.sql
src/: db.rs  main.rs  schema.rs  user_inject.rs
src/dto/: error.rs
src/models/: checklist.rs  checklist_item.rs  mod.rs  task.rs  tasks_list.rs
src/routes/: checklist_items.rs  checklists.rs  mod.rs  tasks.rs  tasks_lists.rs
