[package]
name = "tasks_service"
version = "0.1.0"
authors = ["Artem Astakhov <artem_astakhov@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.11", features = ["serde"] }
diesel = { version = "1.4.4", features = ["chrono", "postgres"] }

rocket = "0.4.4"
rocket_contrib = { version = "0.4.4", features = ["json"] }
rocket_cors = "0.5.1"
jsonwebtoken = "5.0.1"

tokio = { version = "0.2", features = ["time", "rt-core", "fs", "macros"] }

serde_json = "1.0.50"
serde = "1.0.106"
serde_derive = "1.0.106"

futures = "0.3.5"

r2d2-diesel = "1.0"
r2d2 = "0.8"

dotenv = "0.15.0"
dotenv_codegen = "0.15.0"