[package]
name = "tasks_service"
version = "0.1.0"
authors = ["Artem Astakhov <artem_astakhov@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.11", features = ["serde"] }
diesel = { version = "1.4.4", features = ["chrono", "postgres", "r2d2"] }
diesel_migrations = "1.4.0"

actix-web = { version = "3.3.2", features = ["openssl"] }
actix-cors = "0.5.3"
jsonwebtoken = "5.0.1"

serde_json = "1.0.50"
serde = "1.0.106"
serde_derive = "1.0.106"
derive_more = "0.99.11"

futures = "0.3.5"

r2d2-diesel = "1.0"
r2d2 = "0.8"

lazy_static = "1.4"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
log = "0.4"